--- a/frontend/why-us.html
+++ b/frontend/why-us.html
@@ -10,7 +10,7 @@
 
   <!-- Navbar -->
   <nav class="bg-gray-100 p-4 shadow-md flex justify-between items-center">
-    <a href="index.html" class="text-xl font-bold text-blue-600">DogGearAI</a>
+    <a href="index.html" class="text-xl font-bold text-blue-600">DogArmor</a>
     <div class="space-x-4 text-sm">
       <a href="index.html" class="hover:text-blue-600">Home</a>
       <a href="how-it-works.html" class="hover:text-blue-600">How it Works</a>
@@ -35,28 +35,21 @@
       <div>
         <h2 class="text-2xl font-semibold mb-2">Solving Real Problems</h2>
         <p class="text-gray-700">
-          Finding the right collar, harness, or leash can be overwhelming with so many options. We use AI and data-driven insights to cut through the noise and deliver personalized recommendations tailored to your dog's unique needs.
+          Finding the right collar, harness, or leash can be overwhelming with so many options. We're here to make dog gear personal rather than common found. Every dog deserves comfort, and every owner deserves happiness.
         </p>
       </div>
 
       <div>
-        <h2 class="text-2xl font-semibold mb-2">Built on Compassion</h2>
+        <h2 class="text-2xl font-semibold mb-2">What Makes us Special</h2>
         <p class="text-gray-700">
-          Our team is made up of dog lovers, data scientists, and product experts committed to improving pet owners’ lives. We understand that your dog’s comfort and safety come first.
-        </p>
-      </div>
-
-      <div>
-        <h2 class="text-2xl font-semibold mb-2">Innovation for the Future</h2>
-        <p class="text-gray-700">
-          We’re continuously refining our AI to include more breeds, behaviors, and gear options. Our upcoming mobile app will make it even easier to get the perfect gear on the go.
+          Whether you're new to dog harnesses or are upgrading, we've created this just for you, simplifying the process. Instead of only gear size and confusing variety, we're the first of our kind to account for your dog's needs on a personal level. 
         </p>
       </div>
 
       <div>
         <h2 class="text-2xl font-semibold mb-2">Ethics & Privacy</h2>
         <p class="text-gray-700">
-          Your data belongs to you. We never sell or share your information, and prioritize your privacy in every feature we build.
+          Your data belongs to you. We don't sell it or share it. Every feature we build puts your privacy first.
         </p>
       </div>
     </div>
