--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16 items-center">
         <div class="flex-shrink-0">
-          <a href="#" class="text-xl font-bold text-blue-600">DogGearAI</a>
+          <a href="#" class="text-xl font-bold text-blue-600">DogArmor</a>
         </div>
         <div class="hidden md:flex space-x-8">
           <a href="how-it-works.html" class="hover:text-blue-600">How it works</a>
