--- a/frontend/about.html
+++ b/frontend/about.html
@@ -13,13 +13,13 @@
   <nav class="bg-gray-100 p-4 shadow-md flex justify-between items-center">
     <a href="index.html" class="text-xl font-bold text-blue-600">DogArmor</a>
     <div class="space-x-6 text-sm">
-      <a href="index.html" class="hover:text-blue-600">Home</a>
-      <a href="how-it-works.html" class="hover:text-blue-600">How it Works</a>
-      <a href="demo.html" class="hover:text-blue-600 font-semibold">Demo</a>
-      <a href="features.html" class="hover:text-blue-600">Features</a>
-      <a href="why-us.html" class="hover:text-blue-600 font-semibold">Why Our Company Matters</a>
-      <a href="about.html" class="text-blue-600 font-semibold">About Us</a>
-      <a href="team.html" class="hover:text-blue-600">Team</a>
+      <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Home</a>
+      <a href="how-it-works.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">How it Works</a>
+      <a href="demo.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Demo</a>
+      <a href="features.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Features</a>
+      <a href="why-us.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Why Our Company Matters</a>
+      <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">About Us</a>
+      <a href="team.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Team</a>
     </div>
   </nav>
 
