--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,23 +13,23 @@
   <nav class="bg-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16 items-center">
-        <div class="flex-shrink-0">
+        <div class="flex-shrink-0 text-2xl font-bold text-blue-600">
           <a href="#" class="text-xl font-bold text-blue-600">DogArmor</a>
         </div>
         <div class="hidden md:flex space-x-8">
-          <a href="how-it-works.html" class="hover:text-blue-600">How it works</a>
-          <a href="demo.html" class="hover:text-blue-600">Demo</a>
-          <a href="features.html" class="hover:text-blue-600">Features</a>
-          <a href="why-us.html" class="hover:text-blue-600">Why our company matters</a>
-          <a href="about.html" class="hover:text-blue-600">About us</a>
-          <a href="team.html" class="hover:text-blue-600">Team</a>
+          <a href="how-it-works.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">How it works</a>
+          <a href="demo.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Demo</a>
+          <a href="features.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Features</a>
+          <a href="why-us.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Why our company matters</a>
+          <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">About us</a>
+          <a href="team.html" class="text-gray-700 hover:text-blue-600 font-medium transition duration-300">Team</a>
         </div>
         <div class="hidden md:flex">
           <a href="#launch" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition">Launch App</a>
         </div>
       </div>
     </div>
-  </nav>
+  </nav> 
 
   <!-- 🐶 Hero Section -->
   <section class="py-20 px-6 text-center bg-gradient-to-r from-blue-50 to-white">
