--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
   </nav> 
 
   <!-- 🐶 Hero Section -->
-  <section class="py-20 px-6 text-center bg-gradient-to-r from-blue-50 to-white">
+  <section class="py-20 px-6 text-center" style="background-color: var(--bg-light);">
     <h1 class="text-4xl md:text-5xl font-extrabold mb-4">Find the Perfect Collar, Harness, or Leash</h1>
     <p class="text-gray-600 text-lg mb-8 max-w-2xl mx-auto">Upload a photo of your dog, enter its behavior details, and get a personalized recommendation in seconds.</p>
 
@@ -71,18 +71,18 @@
   </section>
 
   <!-- 💡 Feature Sections -->
-  <section id="how" class="py-16 px-8 bg-gray-50">
-    <h2 class="text-2xl font-bold mb-4">How it works</h2>
+  <section id="how" class="py-16 px-6" style="background-color: var(--bg-alt);">
+    <h2 class="text-3xl font-bold mb-6 text-center">How It Works</h2>
     <p class="text-gray-600 max-w-xl">You upload a picture of your dog and fill out a quick form. Our AI analyzes breed, size, and behavior data to recommend the best gear.</p>
   </section>
 
-  <section id="demo" class="py-16 px-8">
-    <h2 class="text-2xl font-bold mb-4">Demo</h2>
+  <section id="demo" class="py-16 px-6" style="background-color: var(--bg-light);">
+    <h2 class="text-3xl font-bold mb-6 text-center">Demo</h2>
     <p class="text-gray-600 max-w-xl">Try a live demo with sample dog photos. See our tech in action!</p>
   </section>
 
-  <section id="features" class="py-16 px-8 bg-gray-50">
-    <h2 class="text-2xl font-bold mb-4">Features</h2>
+  <section id="features" class="py-16 px-6" style="background-color: var(--bg-alt);">
+    <h2 class="text-3xl font-bold mb-6 text-center">Features</h2>
     <ul class="list-disc list-inside text-gray-600 space-y-2">
       <li>Breed & size recognition</li>
       <li>Budget-aware recommendations</li>
@@ -90,18 +90,18 @@
     </ul>
   </section>
 
-  <section id="why" class="py-16 px-8">
-    <h2 class="text-2xl font-bold mb-4">Why our company matters</h2>
+  <section id="why" class="py-16 px-6" style="background-color: var(--bg-light);">
+    <h2 class="text-3xl font-bold mb-6 text-center">Why our company matters</h2>
     <p class="text-gray-600 max-w-xl">We believe every dog deserves comfort and control. Our platform solves gear mismatch, reduces injuries, and makes dog ownership easier. Our aim is for every dog and its owner to have the best experience. </p>
   </section>
 
-  <section id="about" class="py-16 px-8 bg-gray-50">
-    <h2 class="text-2xl font-bold mb-4">About us</h2>
+  <section id="about" class="py-16 px-6" style="background-color: var(--bg-alt);">
+    <h2 class="text-3xl font-bold mb-6 text-center">About us</h2>
     <p class="text-gray-600 max-w-xl">We’re a small team of engineers and dog lovers creating smarter tools to make pet gear shopping data-driven and effortless.</p>
   </section>
 
-  <section id="team" class="py-16 px-8">
-    <h2 class="text-2xl font-bold mb-4">Meet the Team</h2>
+  <section id="team" class="py-16 px-6" style="background-color: var(--bg-light);">
+    <h2 class="text-3xl font-bold mb-6 text-center">Meet the Team</h2>
     <p class="text-gray-600 max-w-xl">Our founders include AI experts, trainers, and animal welfare advocates who want to improve the lives of dogs everywhere.</p>
   </section>
 
