--- a/frontend/why-us.html
+++ b/frontend/why-us.html
@@ -24,7 +24,7 @@
   </nav>
 
   <!-- Hero -->
-  <section class="py-16 max-w-4xl mx-auto px-6 text-center">
+  <section class="py-16 max-w-4xl mx-auto px-6 text-center" data-aos="fade-up">
     <h1 class="text-4xl font-bold mb-6">Why Our Company Matters</h1>
     <p class="text-lg text-gray-700 mb-12">
       At DogArmor, we believe every dog deserves gear that fits perfectly — because a happy dog means a happy owner. 
