--- a/frontend/features.html
+++ b/frontend/features.html
@@ -24,7 +24,7 @@
   </nav>
 
   <!-- Hero -->
-  <section class="py-16 bg-blue-50 text-center">
+  <section class="py-16 bg-blue-50 text-center" data-aos="fade-right">
     <h1 class="text-4xl font-bold mb-4">Key Features of DogArmor</h1>
     <p class="text-lg text-gray-600">Smart, personalized, and built for your dog’s unique needs.</p>
   </section>
