--- a/frontend/how-it-works.html
+++ b/frontend/how-it-works.html
@@ -23,7 +23,7 @@
   </nav>
 
   <!-- How It Works Section -->
-  <section class="py-16 px-6 max-w-5xl mx-auto">
+  <section class="py-16 px-6 max-w-5xl mx-auto" data-aos="fade-up" data-aos-delay="100">
     <h1 class="text-4xl font-bold text-center mb-10">How It Works</h1>
     
     <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
