--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,14 @@
   <title>Dog Armor Recommender</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 </head>
+
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 <body class="bg-white text-gray-900">
 
   <!-- 🌐 NAVBAR -->
