--- a/frontend/team.html
+++ b/frontend/team.html
@@ -24,7 +24,7 @@
   </nav>
 
   <!-- Hero -->
-  <section class="py-16 max-w-5xl mx-auto px-6 text-center">
+  <section class="py-16 max-w-5xl mx-auto px-6 text-center" data-aos="fade-up" data-aos-delay="100">
     <h1 class="text-4xl font-bold mb-10">Meet Our Team</h1>
 
     <div class="grid md:grid-cols-2 gap-10">
