--- a/frontend/features.html
+++ b/frontend/features.html
@@ -26,7 +26,7 @@
   <!-- Hero -->
   <section class="py-16 bg-blue-50 text-center" data-aos="fade-right">
     <h1 class="text-4xl font-bold mb-4">Key Features of DogArmor</h1>
-    <p class="text-lg text-gray-600">Smart, personalized, and built for your dog’s unique needs.</p>
+    <p class="text-lg text-gray-600">Smart, personalized, and built for your dog’s unique needs. </p>
   </section>
 
   <!-- Features Grid -->
@@ -34,7 +34,7 @@
     <!-- Feature 1 -->
     <div class="bg-white p-6 rounded shadow border">
       <h3 class="text-xl font-semibold mb-2">📸 Image-Based Recognition</h3>
-      <p class="text-gray-700">Upload a photo of your dog to help us better understand their body type and age — it boosts accuracy so we can recommend the most comfortable gear.</p>
+      <p class="text-gray-700">Upload a photo of your dog to help us better understand their body type and age — it boosts accuracy so we can recommend the most comfortable gear. A dog's anatomy is crucial when choosing and fitting a harness. A well-fitting harness should be designed to support and distribute weight evenly, minimizing pressure points and allowing for natural movement. Our image recognition ai technology will examine your dog’s anatomy and provide a harness that best fits every skeletal structure. </p>
     </div>
 
     <!-- Feature 2 -->
