updated new css

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -24,7 +24,7 @@
   </nav>
 
   <!-- Hero -->
-  <section class="bg-blue-50 py-16 text-center" data-aos="fade-up">
+  <section class="section section-light bg-blue-50 py-16 text-center" data-aos="fade-up">
     <h1 class="text-4xl font-bold mb-4">About DogArmor</h1>
     <p class="text-lg max-w-2xl mx-auto">Built to help every dog find the perfect gear — intelligently, compassionately, and affordably.</p>
   </section>
