--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
   </nav> 
 
   <!-- 🐶 Hero Section -->
-  <section class="py-20 px-6 text-center" style="background-color: var(--bg-light);">
+  <section class="section section-light py-20 px-6 text-center" style="background-color: var(--bg-light);">
     <h1 class="text-4xl md:text-5xl font-extrabold mb-4">Find the Perfect Collar, Harness, or Leash</h1>
     <p class="text-gray-600 text-lg mb-8 max-w-2xl mx-auto">Upload a photo of your dog, enter its behavior details, and get a personalized recommendation in seconds.</p>
 
