--- a/frontend/demo.html
+++ b/frontend/demo.html
@@ -23,7 +23,7 @@
   </nav>
 
   <!-- Demo Section -->
-  <section class="py-16 px-6 max-w-3xl mx-auto" data-aos="zoom-in">
+  <section class="section section-light py-16 px-6 max-w-3xl mx-auto" data-aos="zoom-in">
     <h1 class="text-4xl font-bold text-center mb-10">Try the Recommendation Demo</h1>
     
     <!-- Form -->
