--- a/frontend/demo.html
+++ b/frontend/demo.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Demo | DogArmor</title>
-  <link rel="stylesheet" href="/style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/style.css" />
 </head>
-<body class="bg-white text-gray-800 font-sans">
+<body class="text-gray-800 font-sans">
   <!-- Navigation Bar -->
   <nav class="bg-gray-100 p-4 shadow-md flex justify-between items-center">
     <a href="index.html" class="text-xl font-bold text-blue-600">DogArmor</a>
