--- a/frontend/about.html
+++ b/frontend/about.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us | Dog Armor Recommender</title>
-  <link rel="stylesheet" href="/style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/style.css" />
 </head>
-<body class="bg-white text-gray-800 font-sans">
+<body class="text-gray-800 font-sans">
   <!-- Navigation Bar -->
   <nav class="bg-gray-100 p-4 shadow-md flex justify-between items-center">
     <a href="index.html" class="text-xl font-bold text-blue-600">DogArmor</a>
@@ -43,7 +43,7 @@
       </p>
   
       <!-- Visual placeholder (replace with actual graphic or mockup later) -->
-      <img src="/assets/system-graphic-placeholder.png" alt="Visual showing input to output process" class="mx-auto rounded-xl shadow-lg w-full max-w-xl" />
+      <img src="https://via.placeholder.com/400x300" alt="Visual showing input to output process" class="mx-auto rounded-xl shadow-lg w-full max-w-xl" />
       
       <p class="text-sm text-gray-500 mt-4 italic">
         From image to insight — built to understand every dog’s unique needs.
