--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dog Armor Recommender</title>
-  <link rel="stylesheet" href="/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 </head>
 
@@ -14,7 +14,7 @@
   AOS.init();
 </script>
 
-<body class="bg-white text-gray-900">
+<body class="text-gray-900">
 
   <!-- 🌐 NAVBAR -->
   <nav class="bg-white shadow-md sticky top-0 z-50">
