--- a/frontend/why-us.html
+++ b/frontend/why-us.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Why Our Company Matters | DogArmor</title>
-  <link rel="stylesheet" href="/style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/style.css" />
 </head>
-<body class="bg-white text-gray-800 font-sans">
+<body class="text-gray-800 font-sans">
 
   <!-- Navbar -->
   <nav class="bg-gray-100 p-4 shadow-md flex justify-between items-center">
